--- a/index.html
+++ b/index.html
@@ -104,6 +104,15 @@
                     </select>
                 </div>
             </div>
+            <div class="ui divider"></div>
+            <div class="ui input">
+                <div class="ui bottom attached label" style="text-align: center">Hair Color</div>
+                <div style="text-align: center">
+                    <select id="hairColorSelector" class="ui fluid selection dropdown"
+                        style="margin-top: 4%; padding-bottom: 2%; margin-right: 200px; background-color: #ececec; border: none">
+                    </select>
+                </div>
+            </div>
         </div>
         <div class="ui divider" style="width: 30%; margin: 0 auto;"></div>
         <div class="ui centered card" style="background-color: #444444; border: none; padding: 1%">
