--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Prodigy Dashboard</title>
+    <title>About</title>
     <!-- Standard Meta -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -13,7 +13,7 @@
     <meta content="#FF0000" data-react-helmet="true" name="theme-color" />
     <meta content="https://media.discordapp.net/attachments/851171575000596505/865580507425013781/pro_dash_logo.png" property="og:image">
 
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="./css/about.css">
   </head>
   <body id="preview">
     <p class="has-line-data" data-line-start="0" data-line-end="1"><img src="https://media.discordapp.net/attachments/851171575000596505/868631170961768528/download_22.png" alt="logo.png" /></p>
