--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./semantic/semantic.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="./index.js"></script>
+    <script src="./js/index.js"></script>
 </head>
 
 <body style="background-color: #292828" onload="init()">
