--- a/login.html
+++ b/login.html
@@ -15,14 +15,14 @@
         <!-- Site Properties -->
         <title>Login</title>
         <link rel="stylesheet" type="text/css" href="./bootstrap-5.0.2-dist/css/bootstrap.min.css" />
-        <link rel="stylesheet" type="text/css" href="./login.css" />
+        <link rel="stylesheet" type="text/css" href="./css/login.css" />
         <link rel="stylesheet" type="text/css" href="./semantic/semantic.min.css" />
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="./bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script src="./index.js" type="text/javascript"></script>
+        <script src="./js/login.js" type="text/javascript"></script>
         <script src="./semantic/semantic.min.js"></script>
     </head>
     <body
