--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                     oninput="this.value = !!this.value && Math.abs(this.value) >= 0 ? Math.abs(this.value) : null"
                     placeholder="Ex: 4" style="background-color: #ececec; border: none; margin-top: 4%" />
             </div>
-            <div class="ui teal button" id="getAllItems" onclick="getAllItems()" style="margin-top: 4%;">Get All Items</div>
+            <div class="ui teal button" id="getAllItems" onclick="getAllItems()" style="margin-top: 4%;">Set All Items</div>
         </div>
         <div class="ui teal button" style="position: fixed; bottom: 10px; left: 10px;" onclick="{
             window.open(window.location.protocol + '//' + window.location.host + '/about.html').focus();
