--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
     <script src="./semantic/semantic.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/index.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TB33EH05CZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TB33EH05CZ');
+</script>
 </head>
 
 <body style="background-color: #292828" onload="init()">
