--- a/index.html
+++ b/index.html
@@ -255,8 +255,7 @@
             window.open(window.location.protocol + '//' + window.location.host + '/about.html').focus();
         }">About
         </div>
-        <div class="ui teal button" style="position: fixed; bottom: 10px; left: 98px;" onclick="window.open('https://github.com/hostedposted/Prodigy/tree/dashboard')">Github
-        </div>
+        <a class="ui teal button" style="position: fixed; bottom: 10px; left: 98px;" href="https://github.com/ProdigyAPI/ProdigyDashboard" target="_blank">Github</a>
         <div class="ui teal button" id="save" style="position: fixed; bottom: 10px; right: 10px;" onclick="save()">Save
         </div>
         <div class="ui teal button" id="logout" style="position: fixed; bottom: 10px; right: 90px; " onclick="logout()">
