default data into create account

--- a/create.html
+++ b/create.html
@@ -46,11 +46,11 @@
             <div class="ui divider"></div>
             <div class="ui input" style="background-color: #444444; border: none">
                 <div class="ui bottom attached label" style="text-align: center">Username</div>
-                <input id="username" onkeydown="return false;" style="background-color: #ececec; border: none; margin-top: 4%" />
+                <input id="username" style="background-color: #ececec; border: none; margin-top: 4%" readonly/>
             </div>
             <div class="ui input" style="background-color: #444444; border: none">
                 <div class="ui bottom attached label" style="text-align: center">Password</div>
-                <input id="password" onkeydown="return false;" style="background-color: #ececec; border: none; margin-top: 4%" />
+                <input id="password" style="background-color: #ececec; border: none; margin-top: 4%" readonly/>
             </div>
             <div class="ui teal button" id="genButton" onclick="generateAccount()" style="margin-top: 4%;">Generate</div>
         </div>
