--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
 
 <head>
@@ -14,7 +15,7 @@
     <meta content="https://media.discordapp.net/attachments/851171575000596505/865580507425013781/pro_dash_logo.png" property="og:image">
 
     <!-- Site Properties -->
-    <title>Dashboard</title>
+    <title>Hacks</title>
 
     <link rel="stylesheet" type="text/css" href="./semantic/semantic.min.css" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
@@ -255,7 +256,7 @@
             window.open(window.location.protocol + '//' + window.location.host + '/about.html').focus();
         }">About
         </div>
-        <a class="ui teal button" style="position: fixed; bottom: 10px; left: 98px;" href="https://github.com/ProdigyAPI/ProdigyDashboard" target="_blank">Github</a>
+        <a class="ui teal button" style="position: fixed; bottom: 10px; left: 98px;" href="https://github.com/fastkdid/ProdigyDashboard-ha" target="_blank">Github</a>
         <div class="ui teal button" id="save" style="position: fixed; bottom: 10px; right: 10px;" onclick="save()">Save
         </div>
         <div class="ui teal button" id="logout" style="position: fixed; bottom: 10px; right: 90px; " onclick="logout()">
